# api/api.yaml
@@ -6,27 +6,102 @@ info:
 servers:
   - url: https://localhost:8080/api/v1
 paths:
-  /usuarios/{id}:
+  /usuarios:
     get:
-      description: Devuelve información de un usuario dado su ID.
-      parameters:
-        - name: id
-          description: "El ID del usuario a devolver."
-          in: path
-          required: true
-          schema:
-            type: integer
+      description: "Devuelve todos los usuarios del sistema."
       responses:
         "200":
-          description: "Éxito, devuelve información del usuario."
+          description: "Éxito, devuelve todos los usuarios."
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Usuario'
+    post:
+      description: "Crea un nuevo usuario."
+      responses:
+        "200":
+          description: "Éxito, devuelve el ID del nuevo usuario."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  new_id:
+                    type: integer
+                    description: "El ID del nuevo usuario."
+        "400":
+          description: "Error, faltan campos o la petición no está en formato JSON."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje:
+                    type: string
+              
+  /usuarios/{id}:
+    get:
+      description: "Devuelve información de un usuario dado su ID."
+      parameters:
+        - name: id
+          description: "El ID del usuario a devolver."
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Usuario'
+      responses:
+        "200":
+          description: "Éxito, devuelve información del usuario."
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Usuario'
         "404":
-          description: Error, el usuario no existe.
+          description: "Error, el usuario no existe."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje:
+                    type: string
+    put:
+      description: "Modifica datos de un usuario."
+      parameters:
+        - name: id
+          description: "El ID del usuario a eliminar."
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "204":
+          description: "Éxito, usuario modificado."
+        "404":
+          description: "Error, el usuario no existe."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  mensaje:
+                    type: string
+    delete:
+      description: "Elimina un usuario."
+      parameters:
+        - name: id
+          description: "El ID del usuario a eliminar."
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "204":
+          description: "Éxito, usuario eliminado."
+        "404":
+          description: "Error, el usuario no existe."
           content:
             application/json:
               schema:
@@ -39,6 +114,8 @@ components:
     Usuario:
       type: object
       properties:
+        "_id":
+          type: integer
         nombre:
           type: string
         apellidos:
@@ -54,10 +131,12 @@ components:
         rol:
           type: integer
       required:
+        - _id
         - nombre
         - apellidos
         - email
         - telefono
+        - contrasenia
         - link_paypal
         - url_foto_perfil
         - rol
